[package]
name = "download-np"
description = """Batch downloads images in all posts by a NP member, \
or download images for a specific NP URL"""
version = "0.1.5"
authors = ["Evan Chang <evanc577@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
fs_extra = "1.2"
futures = "0.3"
htmlescape = "0.3"
indicatif = "0.15"
lazy_static = "1.4"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2"
tokio = { version = "1", features = ["full"] }
