[package]
name = "download-np"
description = """Batch downloads images in all posts by a NP member, \
or download images for a specific NP URL"""
version = "0.1.5"
authors = ["Evan Chang <evanc577@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
fs_extra = "1.2"
futures = "0.3"
htmlescape = "0.3"
indicatif = "0.17"
lazy_static = "1.4"
regex = "1.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "deflate", "gzip", "brotli", "zstd"] }
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
tokio = { version = "1.19", features = ["full"] }
